--- a/geminstaller.yml
+++ b/geminstaller.yml
@@ -10,13 +10,13 @@ gems:
 - name: rcov
   version: >= 0.8.1.2.0
 <% else %>
-- name: spicycode-rcov
-  version: >= 0.8.2.1
+- name: relevance-rcov
+  version: >= 0.8.3.4
 <% end %> 
 - name: rails
   version: >= 2.3.2
 - name: rspec
-  version: >= 1.2.6
+  version: >= 1.2.7
 - name: rspec-rails
-  version: >= 1.2.6
+  version: >= 1.2.7
   
